<resources>
    <string name="app_name">My Calculator</string>
    <string name="_0">0</string>
    <string name="five">5</string>
    <string name="two">2</string>
    <string name="clear">CLR</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="equal">=</string>
    <string name="pluse">+</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="three">3</string>
    <string name="six">6</string>
    <string name="nine">9</string>
    <string name="one">1</string>
    <string name="four">4</string>
    <string name="divied">/</string>
</resources>